--- a/CoolPainter/CoolPainter/Base.lproj/Main.storyboard
+++ b/CoolPainter/CoolPainter/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +12,132 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CoolPainter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="90W-ja-5zQ">
+                                <rect key="frame" x="67" y="270.5" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="appLogoImage" destination="90W-ja-5zQ" id="Ovk-3e-1RE"/>
+                        <segue destination="E9A-L7-Zin" kind="show" identifier="loginSegue" id="hPD-rl-PGB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-7" y="135"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="VHy-rD-aGb">
+            <objects>
+                <viewController id="E9A-L7-Zin" customClass="LoginViewController" customModule="CoolPainter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dkc-qU-AYn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What's your name?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JMG-Vi-Moy">
+                                <rect key="frame" x="114.5" y="40" width="146.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VfR-EP-FI5">
+                                <rect key="frame" x="87.5" y="83" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="DrP-SM-qNJ"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y8h-s2-WsO">
+                                <rect key="frame" x="303.5" y="83" width="55.5" height="30"/>
+                                <state key="normal" title="Go"/>
+                                <connections>
+                                    <action selector="onDoneClicked:" destination="E9A-L7-Zin" eventType="touchUpInside" id="Ila-QI-JMR"/>
+                                    <segue destination="Vjx-4S-X9g" kind="show" identifier="mainContentSegue" id="nA0-uw-vHy"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="y8h-s2-WsO" firstAttribute="centerY" secondItem="VfR-EP-FI5" secondAttribute="centerY" id="3Bt-qx-ONK"/>
+                            <constraint firstItem="VfR-EP-FI5" firstAttribute="centerX" secondItem="d2H-pC-QOL" secondAttribute="centerX" id="GX7-Pd-P30"/>
+                            <constraint firstItem="JMG-Vi-Moy" firstAttribute="top" secondItem="d2H-pC-QOL" secondAttribute="top" constant="20" id="Lcp-5e-8q1"/>
+                            <constraint firstItem="JMG-Vi-Moy" firstAttribute="centerX" secondItem="d2H-pC-QOL" secondAttribute="centerX" id="dxd-MR-fqQ"/>
+                            <constraint firstItem="y8h-s2-WsO" firstAttribute="leading" secondItem="VfR-EP-FI5" secondAttribute="trailing" constant="16" id="mMg-8j-iSX"/>
+                            <constraint firstItem="d2H-pC-QOL" firstAttribute="trailing" secondItem="y8h-s2-WsO" secondAttribute="trailing" constant="16" id="vh9-UC-288"/>
+                            <constraint firstItem="VfR-EP-FI5" firstAttribute="top" secondItem="JMG-Vi-Moy" secondAttribute="bottom" constant="22" id="x0b-rc-UB0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="d2H-pC-QOL"/>
+                    </view>
+                    <connections>
+                        <outlet property="nickNameTextField" destination="VfR-EP-FI5" id="2AB-dq-gaH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D8k-Ce-vB2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="705" y="134"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="m5d-w7-clz">
+            <objects>
+                <viewController id="jj2-zR-CLM" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="e7N-hV-mgX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="uNW-yN-TIz"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="YEe-ms-8U2"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wez-Ib-TTG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2425" y="467"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="fli-GH-OCq">
+            <objects>
+                <viewController id="T0z-6f-hIj" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rpp-kz-KeB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="UX0-5j-jXS"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="vZ0-uG-C6V"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nPM-e7-HJe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2425" y="-198"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="BKT-xK-34v">
+            <objects>
+                <tabBarController id="Vjx-4S-X9g" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Od4-6G-hXa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="T0z-6f-hIj" kind="relationship" relationship="viewControllers" id="kHn-94-Dh6"/>
+                        <segue destination="jj2-zR-CLM" kind="relationship" relationship="viewControllers" id="3DW-oQ-tlN"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hFF-Pv-aNS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1471" y="133"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logo" width="150" height="150"/>
+    </resources>
 </document>
